add_executable(archiver
        main.cpp
        huffman/trie.cpp
        huffman/trie.h
        huffman/huffman.cpp
        huffman/huffman.h
        huffman/node.cpp
        huffman/node.h
        encode.cpp
        encode.h
        io/reader.cpp
        io/reader.h
        io/writer.cpp
        io/writer.h
        parser.cpp
        parser.h
        consts.h
        decode.cpp
        decode.h io/io_consts.h huffman/minheap.cpp huffman/minheap.h)
